# app/Http/Controllers/NewPasswordController.php
@@ -3,13 +3,19 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\Auth\ForgotPwdRequest;
+use App\Http\Requests\Auth\PinReset;
+use App\Http\Requests\Auth\ResetPwd;
+use App\Mail\User\PasswordMail;
+use App\Models\ResetPin;
 use App\Models\User;
 use Illuminate\Auth\Events\PasswordReset;
 use Illuminate\Http\Request;
+use Illuminate\Support\Carbon;
+use Illuminate\Support\Facades\DB;
 use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Mail;
 use Illuminate\Support\Facades\Password;
 use Illuminate\Support\Str;
-use Nette\Schema\ValidationException;
 
 class NewPasswordController extends Controller
 {
@@ -20,22 +26,34 @@ class NewPasswordController extends Controller
         $user = User::where('email', $data['email'])->first();
         if($user)
         {
-            $status = Password::sendResetLink(
-                $request->only('email')
-            );
-
-            if($status == Password::RESET_LINK_SENT)
+            $pin_code = random_int(100000, 999999);
+            while(ResetPin::where('pin_code', '=', $pin_code)->first() != null)
             {
-                return [
-                    'status' => __($status)
-                ];
+                $pin_code = random_int(100000, 999999);
             }
-            else
-            {
-                return [
-                    'email' => [trans($status)],
-                ];
-            };
+            Mail::to($data['email'])->send(new PasswordMail($pin_code));
+            ResetPin::create([
+                'pin_code' => $pin_code,
+                'expires_at' => Carbon::now()->addMinutes(15),
+                'email' => $data['email']
+            ]);
+            return back()->with('message', 'Письмо отправлено!');
+//            $status = Password::sendResetLink(
+//                $request->only('email')
+//            );
+//
+//            if($status == Password::RESET_LINK_SENT)
+//            {
+//                return [
+//                    'status' => __($status)
+//                ];
+//            }
+//            else
+//            {
+//                return [
+//                    'email' => [trans($status)],
+//                ];
+//            };
         }
         else
         {
@@ -44,34 +62,75 @@ class NewPasswordController extends Controller
             ], 404);
         }
     }
-    public function reset(Request $request)
-    {
-        $request->validate([
-            'token' => ['required'],
-            'email' => ['required', 'email'],
-            'password' => ['required', 'confirmed', 'max:254']
-        ]);
 
-        $status = Password::reset(
-            $request->only('email', 'password', 'password_confirmation', 'token'),
-            function (User $user, string $password) {
-                $user->forceFill([
-                    'password' => Hash::make($password)
-                ])->setRememberToken(Str::random(60));
-
-                $user->save();
-
-                event(new PasswordReset($user));
-            }
-        );
-        if($status != Password::PASSWORD_RESET)
+    public function getreset(PinReset $request) {
+        $data = $request->validated();
+        $reset_pin = ResetPin::where('pin_code', '=', $data['pin_code'])->first();
+        if($reset_pin && $reset_pin->expires_at > Carbon::now())
         {
-            return [
-                'status' => [trans($status)],
-            ];
+            $user = User::where('email', '=', $reset_pin->email)->first();
+            if ($user)
+            {
+                return response()->json([], 200);
+            }
+            else
+            {
+                return response()->json([
+                    'message' => 'Пользователь не найден'
+                ], 404);
+            }
         }
-        return [
-            'status' => __($status)
-        ];
+        else
+        {
+            return response()->json([
+                'message' => 'PIN не найден или истёк срок действия'
+            ], 404);
+        }
+    }
+
+    public function reset(ResetPwd $request)
+    {
+        $data = $request->validated();
+        $data['password'] = bcrypt($data['password']);
+        $reset_pin = ResetPin::where('pin_code', '=', $data['pin_code'])->first();
+        if($reset_pin->expires_at > Carbon::now()) {
+            $user = User::whereEmail($reset_pin->email)->first();
+            if ($user) {
+                $user->update(['password' => $data['password']]);
+                $reset_pin->truncate();
+                return response()->json([], 200);
+            } else {
+                return response()->json([
+                    'message' => 'Пользователь не найден'
+                ], 404);
+            }
+        }
+        else {
+            return response()->json([
+                'message' => 'У PIN истёк срок действия. Повторите сброс пароля'
+            ], 405);
+        }
+
+//        $status = Password::reset(
+//            $data->only('email', 'password', 'password_confirmation', 'token'),
+//            function (User $user, string $password) {
+//                $user->forceFill([
+//                    'password' => Hash::make($password)
+//                ])->setRememberToken(Str::random(60));
+//
+//                $user->save();
+//
+//                event(new PasswordReset($user));
+//            }
+//        );
+//        if($status != Password::PASSWORD_RESET)
+//        {
+//            return [
+//                'status' => [trans($status)],
+//            ];
+//        }
+//        return [
+//            'status' => __($status)
+//        ];
     }
 }
